# Devops_agent_v2

./: .dockerignore  .gitignore  Dockerfile  Monolithic.py  README.md  api.py  docker-compose.yml  generate_graph.py  main.py  main_v2.py  pyproject.toml  requirements.txt  test_env.py  test_graph.py  test_graph_v3.py  test_langsmith.py  test_plan_executor.py  test_plan_loop.py  test_plan_response.py  test_planner.py  test_replanner.py  test_replanner_v2.py  testconnection.py  testmemory.py
LLM/: ollama_llm.py
agents/: devops_agent.py  devops_agent_v2.py
database/: postgres.py
evaluation/: argument_dataset.py  e2e_dataset.py  planner_dataset.py  test_argument_accuracy.py  test_e2e.py  test_planner_accuracy.py
graph/: approval.py  argument_extractor.py  checkpointer.py  docker_router.py  executor.py  k8s_router.py  nodes.py  plan_executor.py  plan_loop.py  plan_response.py  planner_v2.py  replanner.py  replanner_v2.py  schemas.py  state.py  tool_registry.py  workflow.py  workflow_v3.py
memory/: chat_memory.py  postgres_memory.py
prompts/: system_prompt.py
tools/: docker_tools.py  k8s_tools.py
utils/: command_runner.py  memory_debugger.py
