[project]
name = "devops-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.14.1",
    "langchain>=1.3.4",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.4",
    "psycopg2-binary>=2.9.12",
]
